<resources>
    <string name="app_name">AMST7</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingrese_contrase_a">Ingrese Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="registrate">Registrate</string>
    <string name="confirmar">Confirmar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a_de_usuario">Contraseña de usuario</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="celular">Celular</string>
    <string name="categoria_favorita">Categoria Favorita</string>
    <string name="usuario_de_registro">Usuario de registro</string>
    <string-array name="sexo">
        <item>Sexo</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
</resources>